# HuaweiSwedenTecharena24

./: .gitignore  README.md  pyproject.toml
CompetitionData1/: Dataset1InputPos1.txt  Dataset1InputPos2.txt  Dataset1InputPos3.txt
codes/: demo_code.py  input_handling.py  kmeans.py  siamese.py  triplet.py  utils.py
codes/data/: gan_dataset.py  gan_model.py  generation.py
dataset0/: Dataset0GroundTruth1.txt  Dataset0GroundTruth2.txt  Dataset0GroundTruth3.txt  Dataset0InputPos1.txt  Dataset0InputPos2.txt  Dataset0InputPos3.txt  Dataset0OutputPos1.txt  Dataset0OutputPos2.txt  Dataset0OutputPos3.txt
directories/01 Register Demo/: links.txt
directories/02 Task Description/: Hackaton 2024 - Compelmentary Data Description.docx  Hackaton 2024 - Site Description.pptx  Hackaton 2024 - Task Backgroud.docx  Hackaton 2024 - Task Description.docx
