[tool.poetry]
name = "huaweiswedentecharena24"
version = "0.1.0"
description = ""
authors = ["Grzegorz Kodrzycki <g.kodrzycki20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
black = "^24.10.0"
isort = "^5.13.2"
xgboost = "^2.1.1"
tqdm = "^4.67.0"
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"